# Nyx-OSINT

./: .bandit  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPLETION_SUMMARY.md  Dockerfile  EXPANDED_PLATFORM_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.ps1  setup.sh
.claude/commands/: buff.md
config/: settings.yaml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  PLATFORM_DATABASE.md  PLUGIN_GUIDE.md  SETUP_GUIDE.md  TESTING.md  USER_MANUAL.md
nyx-windows-exe/: .gitignore  README.md  build.bat  build_config.yaml  requirements-build.txt  test_exe.py  update_manifest.json.example
nyx-windows-exe/build_scripts/: build.py  build_all.py  prepare_resources.py
nyx-windows-exe/src/nyx/: __init__.py  launcher.py
nyx-windows-exe/src/nyx/config/: __init__.py
nyx-windows-exe/src/nyx/core/: __init__.py  resource_paths.py  update_client.py  update_service.py  updater.py  version.py
nyx-windows-exe/src/nyx/utils/: __init__.py  update_utils.py
src/nyx/: __init__.py  cli.py  main.py
src/nyx/analysis/: __init__.py  correlation.py  graphs.py  timeline.py
src/nyx/config/: __init__.py  base.py  encryption.py  updater_config.py
src/nyx/core/: __init__.py  cache.py  database.py  events.py  http_client.py  logger.py  resource_paths.py  types.py  update_client.py  update_service.py  updater.py  utils.py
src/nyx/export/: __init__.py  csv_export.py  html.py  json_export.py  pdf.py
src/nyx/filters/: __init__.py  advanced.py  batch.py  saved_searches.py
src/nyx/gui/: __init__.py  main_window.py  update_notifications.py
src/nyx/intelligence/: __init__.py  deep.py  email.py  person.py  phone.py  smart.py
src/nyx/models/: __init__.py  platform.py  target.py
src/nyx/osint/: __init__.py  checker.py  platforms.py  plugin.py  profile_builder.py  search.py
src/nyx/search_engines/: __init__.py  base.py  implementations.py
src/nyx/utils/: __init__.py  progress.py
tests/: __init__.py  conftest.py  sanity.py
tests/integration/: __init__.py  test_database.py  test_export.py  test_search_pipeline.py
tests/unit/: __init__.py  test_cli.py
tests/unit/analysis/: test_correlation.py  test_graphs.py
tests/unit/config/: test_base.py  test_encryption.py
tests/unit/core/: test_cache.py  test_database.py  test_http_client.py
tests/unit/export/: test_csv_export.py  test_html_export.py  test_json_export.py  test_pdf_export.py
tests/unit/filters/: __init__.py  test_advanced.py
tests/unit/gui/: test_main_window.py
tests/unit/intelligence/: test_deep.py  test_email.py  test_person.py  test_phone.py  test_smart.py
tests/unit/osint/: test_checker.py  test_plugin.py  test_profile_builder.py  test_search.py
